[gd_scene load_steps=6 format=3 uid="uid://bsn0fhft781wv"]

[ext_resource type="Script" path="res://scripts/SlimeEnemy.gd" id="1_wk11n"]
[ext_resource type="Texture2D" uid="uid://cm6vp62p4bh3" path="res://PNG/selected/slime.png" id="2_d37lp"]
[ext_resource type="Texture2D" uid="uid://c7w0c0evxhvbh" path="res://PNG/selected/slime_fram1.png" id="3_o4wyc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yyhbx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d37lp")
}, {
"duration": 1.0,
"texture": ExtResource("3_o4wyc")
}],
"loop": true,
"name": &"dealing_damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d37lp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_orru3"]
size = Vector2(29, 18)

[node name="SlimeEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_wk11n")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_yyhbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_orru3")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_orru3")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
